-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 20, 21
-
Component/s: hotspot
-
b08
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8315423 | 17.0.10-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8309348 | 17.0.9 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
OopMapCache::compute_one_oop_map creates a temporary OopMapCacheEntry and fails to call flush() or deallocate_bit_mask() leaking the data.
- backported by
-
JDK-8309348 Memory leaks in OopMapCache
-
- Resolved
-
-
JDK-8315423 Memory leaks in OopMapCache
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/ac9c6966
-
Commit
openjdk/jdk/e2a3b20c
-
Review
openjdk/jdk17u-dev/1412
-
Review
openjdk/jdk/12230
(1 links to)