8301187: Memory leaks in OopMapCache

Backport-of: e2a3b20ca80186a3d3d1a2a9029036b088b3fc9c